fixed z-index issue with nav links arrrgh

--- a/index.css
+++ b/index.css
@@ -191,6 +191,7 @@ button {
     mask-image: linear-gradient(to bottom, transparent 10%, black 90%);
     top: 0px;
     position: fixed;
+    z-index: 0;
 }
 @media only screen and (max-width: 750px) {
     .nav-container {
